fix: Atualiza o componente de calendário e ajusta alguns erros de css, arruma erros dentro dos testes de appoointment.